--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
     "classnames": "^2.3.1",
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -25,7 +27,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev-server": "ts-node -P src/server/tsconfig.json src/server/index.ts"
   },
   "main": "main.js",
   "homepage": "./",
@@ -49,6 +52,7 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.3.1",
+    "@types/express": "^4.17.12",
     "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
