--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
     "classnames": "^2.3.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "http-proxy-middleware": "^2.0.0",
+    "node-fetch": "^2.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -28,6 +29,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "db-init": "ts-node -P src/server/tsconfig.json src/server/initDatabase.ts",
     "dev-server": "ts-node -P src/server/tsconfig.json src/server/index.ts"
   },
   "main": "main.js",
@@ -52,8 +54,11 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.3.1",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
+    "@types/node-fetch": "^2.5.10",
     "@types/react-router-dom": "^5.1.7",
+    "@types/sqlite3": "^3.1.7",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
     "electron": "^12.0.8",
