--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^15.3.0",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
+    "body-parser": "^1.19.0",
     "classnames": "^2.3.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
